Scroll latency metrics not recorded when scroll components don't exist.

Bug: 773696
Change-Id: Id5fa0604f181f3d0da20c383a38d3a3bdbb63c0f
Reviewed-on: https://chromium-review.googlesource.com/712709
Commit-Queue: Sahel Sharifymoghaddam <sahel@chromium.org>
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508154}
Former-commit-id: cdcdb2bfd411ba64b281645da10d58686894a23a